--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "backbone": "^1.3.3",
+    "backbone": "~1.1.2",
     "backbone.localstorage": "^1.1.16",
+    "backbone.marionette": "^2.4.1",
     "jquery": "^1.11.0",
     "underscore": "^1.3.3"
   }
